--- a/src/index.scss
+++ b/src/index.scss
@@ -519,3 +519,42 @@ footer {
     }
   }
 }
+.language {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  right: 10%;
+  .button {
+    font-size: 15px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 50px;
+    background-color: $background-color;
+    border: 0;
+    color: $white-color;
+    cursor: pointer;
+  }
+
+  .lang-list {
+    display: flex;
+    flex-direction: column;
+    background-color: $gray-color;
+    .list-btn {
+      font-size: 13px;
+      font-weight: 100;
+      margin-top: 5px;
+      margin-bottom: 5px;
+      width: 50px;
+      background-color: $gray-color;
+      border: 0;
+      color: $white-color;
+      cursor: pointer;
+    }
+    .active {
+      text-decoration: underline;
+    }
+  }
+}
